--- a/style.css
+++ b/style.css
@@ -2,3 +2,31 @@ body{
     margin: 0;
     padding: 0;
 }
+
+header{
+    display: flex;
+    background-color: rgb(0, 207, 207);
+    justify-content: space-around;
+    padding: 2.5em;
+    font-family: "Exo 2", sans-serif;
+}
+
+header a{
+    text-decoration: none;
+    color: black;
+    transition: 0.3s;
+    font-size: 20px;
+}
+
+header a:hover{
+    font-weight: bold;
+    -webkit-transform: scale(1.2);
+}
+
+.active{
+    font-weight: bold;
+}
+
+footer{
+    display: flex;
+}
