--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 header{
     display: flex;
     background-color: rgb(0, 207, 207);
-    justify-content: space-around;
+    justify-content: flex-end;
     padding: 2.5em;
     font-family: "Exo 2", sans-serif;
 }
@@ -16,6 +16,7 @@ header a{
     color: black;
     transition: 0.3s;
     font-size: 20px;
+    margin-left: 1em;
 }
 
 header a:hover{
@@ -25,6 +26,14 @@ header a:hover{
 
 .active{
     font-weight: bold;
+}
+
+.MiniTVZ{
+    margin-right: auto;
+}
+
+.MiniTVZ:hover{
+    transform: none;
 }
 
 footer{
