--- a/style.css
+++ b/style.css
@@ -38,4 +38,19 @@ header a:hover{
 
 footer{
     display: flex;
+    background-color: rgb(0, 143, 143);
+    font-family: "Exo 2", sans-serif;
+    padding: 2.5em;
+    font-size: 20px;
+    justify-content: center;
+}
+
+footer a{
+    text-decoration: none;
+    color: black;
+    margin-left: 10px;
+}
+
+.ig{
+    font-size: 25px;
 }
