--- a/style.css
+++ b/style.css
@@ -25,6 +25,23 @@ header a:hover{
     -webkit-transform: scale(1.2);
 }
 
+.naslovnica{
+    display: flex;
+    background:
+        linear-gradient(
+          rgba(0, 0, 0, 0.6), 
+          rgba(0, 0, 0, 0.6)
+        ),
+        url("https://www.tvz.hr/wp-content/uploads/2022/06/prom2-scaled.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: azure;
+}
+
 .active{
     font-weight: bold;
 }
@@ -39,6 +56,7 @@ header a:hover{
 
 article{
     padding: 100px;
+    padding-top: 0;
 }
 
 article h1{
